@@ -5,6 +5,8 @@
 3. Remove usage of vue-router.
 4. Allow jump-list to have more entries.
 5. Fix jumplist colours, especially for light variant.
+6. Remove 'Music Folders' from non-server  categories listing, its just too
+   slow.
 
 0.6.0
 -----
